<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/surface"
    android:padding="@dimen/padding_screen">

    <EditText android:id="@+id/edit_email"
        android:layout_width="0dp" android:layout_height="wrap_content"
        android:hint="@string/auth_email_hint" android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <EditText android:id="@+id/edit_password"
        android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/auth_password_hint" android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <Button android:id="@+id/btn_login"
        android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_section" android:text="@string/auth_login"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <Button android:id="@+id/btn_register"
        android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium" android:text="@string/auth_register"
        style="?attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <Button android:id="@+id/btn_google"
        android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_section" android:text="@string/auth_google"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
